--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,7 @@
 ---
 import AppFooter from "../components/AppFooter.astro";
-import AppHeader from "../components/AppHeader.astro"
+import AppHeader from "../components/AppHeader.astro";
 ---
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,17 +10,51 @@ import AppHeader from "../components/AppHeader.astro"
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Template built with tailwindcss using Tailus blocks v2">
+		<meta name="description" content="Template built with tailwindcss using Tailus blocks v2" />
 		<title>Auto B2B</title>
 
-		<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet" />
+		
+		<!-- Tracking Script -->
+		<script is:inline>
+			// @ts-nocheck
+			(function() {
+				var reb2b = window.reb2b = window.reb2b || [];
+				if (reb2b.invoked) return;
+				reb2b.invoked = true;
+				reb2b.methods = ["identify", "collect"];
+				reb2b.factory = function(method) {
+					return function() {
+						var args = Array.prototype.slice.call(arguments);
+						args.unshift(method);
+						reb2b.push(args);
+						return reb2b;
+					};
+				};
+				for (var i = 0; i < reb2b.methods.length; i++) {
+					var key = reb2b.methods[i];
+					reb2b[key] = reb2b.factory(key);
+				}
+				reb2b.load = function(key) {
+					var script = document.createElement("script");
+					script.type = "text/javascript";
+					script.async = true;
+					script.src = "https://s3-us-west-2.amazonaws.com/b2bjsstore/b/" + key + "/VN080H4YKZ6J.js.gz";
+					var first = document.getElementsByTagName("script")[0];
+					first.parentNode.insertBefore(script, first);
+				};
+				reb2b.SNIPPET_VERSION = "1.0.1";
+				reb2b.load("VN080H4YKZ6J");
+			})();
+		</script>
 	</head>
 	<body class="bg-[#F6F6F6]">
-		<AppHeader/>
+		<AppHeader />
 		<slot />
-		<AppFooter/>
+		<AppFooter />
 	</body>
 </html>
+
 <style>
 	html {
 		font-family: Urbanist, sans-serif;
