--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -270,14 +270,16 @@ import templates from './templates.json' assert { type: 'json' };
     if (emailError) emailError.classList.add('hidden');
 
     try {
-      const response = await fetch(`https://n8n.zspirelabs.com/webhook/send-drive-link/${currentTemplate.link}`, {
+      const response = await fetch(`http://127.0.0.1:54321/functions/v1/hello-world`, {
+      // const response = await fetch(`https://zojdqohmdmgoczdcmaik.supabase.co/functions/v1/hello-world`, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
         },
         body: JSON.stringify({ 
           email,
-          templateName: currentTemplate.name 
+          templateName: currentTemplate.name,
+          templateLink: currentTemplate.link
         }),
       });
 
