--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import AppFooter from "../components/AppFooter.astro";
 import AppHeader from "../components/AppHeader.astro";
+import TopBanner from "../components/TopBanner.astro";
 ---
 
 <!DOCTYPE html>
@@ -49,6 +50,7 @@ import AppHeader from "../components/AppHeader.astro";
 		</script>
 	</head>
 	<body class="bg-[#F6F6F6]">
+		<TopBanner/>
 		<AppHeader />
 		<slot />
 		<AppFooter />
