--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,8 @@ import TopBanner from "../components/TopBanner.astro";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Template built with tailwindcss using Tailus blocks v2" />
+		<!-- <meta name="description" content="Template built with tailwindcss using Tailus blocks v2" /> -->
+		<meta name="description" content="Streamline your operations with AI-driven automation." />
 		<title>Auto B2B</title>
 
 		<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet" />
