--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,9 +50,9 @@ import TopBanner from "../components/TopBanner.astro";
 			})();
 		</script>
 	</head>
-	<body class="bg-[#F6F6F6]">
-		<TopBanner/>
-		<AppHeader />
+	<body class="bg-primary">
+		<!-- <TopBanner/> -->
+		<AppHeader />	
 		<slot />
 		<AppFooter />
 	</body>
