--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -6,7 +6,7 @@ import Container from "./Container.astro";
 <header>
     <nav class="z-10 w-full absolute">
         <Container>
-            <div class="flex flex-wrap items-center justify-between py-2 gap-6 md:py-4 md:gap-0 relative">
+            <div class="flex text-white flex-wrap items-center justify-between py-2 gap-6 md:py-4 md:gap-0 relative">
                 <input aria-hidden="true" type="checkbox" name="toggle_nav" id="toggle_nav" class="hidden peer">
                 <div class="relative z-20 w-full flex justify-between lg:w-max md:px-0">
                     <a href="/" aria-label="logo" class="flex space-x-2 items-center">
@@ -14,7 +14,7 @@ import Container from "./Container.astro";
                             <!-- <div class="h-4 w-4 rounded-full bg-gray-900"></div> -->
                             <div class="h-6 w-2 bg-primary"></div>
                         </div>
-                        <span class="text-2xl font-bold text-gray-900">Auto B2B</span>
+                        <span class="text-2xl font-bold">Establish Cred</span>
                     </a>
                     
                     <div class="relative flex items-center lg:hidden max-h-10">
@@ -30,7 +30,7 @@ import Container from "./Container.astro";
                             peer-checked:scale-100 peer-checked:opacity-100 peer-checked:visible lg:shadow-none 
                             darkcancelshadow-none darkcancelbg-gray-800 darkcancelborder-gray-700">
                    
-                    <div class="text-gray-600 darkcanceltext-gray-300 lg:pr-4 lg:w-auto w-full lg:pt-0">
+                    <div class=" darkcanceltext-gray-300 lg:pr-4 lg:w-auto w-full lg:pt-0">
                         <ul class="tracking-wide font-medium lg:text-sm flex-col flex lg:flex-row gap-6 lg:gap-0">
                             <li>
                                 <a href="#features" class="block md:px-4 transition hover:text-primary">
@@ -65,7 +65,7 @@ import Container from "./Container.astro";
                             href="https://calendly.com/ayushdungriyal2/intro-call"
                             class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                             >
-                            <span class="relative text-sm font-semibold text-white"
+                            <span class="relative text-sm font-semibold text-black"
                                 >Get Started</span
                             >
                         </a>
