--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -2,7 +2,6 @@
 import Container from "./Container.astro";
 ---
 
-
 <div class="">
   <Container>
     <!-- Centered Header Section -->
@@ -26,15 +25,14 @@ import Container from "./Container.astro";
         <!-- Content Container -->
         <div class="relative p-8">
           <div class="space-y-6">
-            <!-- Editorials -->
+            <!-- Editorials - Using Newspaper icon -->
             <div class="flex items-start gap-4 bg-white darkcancelbg-gray-800/50 rounded-xl p-4 shadow-sm">
               <div class="w-12 h-12 bg-red-50 darkcancelbg-red-900/10 rounded-lg flex items-center justify-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-secondary" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                  <polyline points="14 2 14 8 20 8"></polyline>
-                  <line x1="16" y1="13" x2="8" y2="13"></line>
-                  <line x1="16" y1="17" x2="8" y2="17"></line>
-                  <line x1="10" y1="9" x2="8" y2="9"></line>
+                  <path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2"/>
+                  <path d="M18 14h-8"/>
+                  <path d="M15 18h-5"/>
+                  <path d="M10 6h8v4h-8V6Z"/>
                 </svg>
               </div>
               <div>
@@ -43,11 +41,14 @@ import Container from "./Container.astro";
               </div>
             </div>
 
-            <!-- Interviews -->
+            <!-- Interviews - Using Users icon -->
             <div class="flex items-start gap-4 bg-white darkcancelbg-gray-800/50 rounded-xl p-4 shadow-sm">
               <div class="w-12 h-12 bg-red-50 darkcancelbg-red-900/10 rounded-lg flex items-center justify-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-secondary" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                  <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
+                  <circle cx="9" cy="7" r="4"/>
+                  <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
+                  <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
                 </svg>
               </div>
               <div>
@@ -56,13 +57,13 @@ import Container from "./Container.astro";
               </div>
             </div>
 
-            <!-- Thought Leadership -->
+            <!-- Thought Leadership - Using Lightbulb icon -->
             <div class="flex items-start gap-4 bg-white darkcancelbg-gray-800/50 rounded-xl p-4 shadow-sm">
               <div class="w-12 h-12 bg-red-50 darkcancelbg-red-900/10 rounded-lg flex items-center justify-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-secondary" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
-                  <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
-                  <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                  <path d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"/>
+                  <path d="M9 18h6"/>
+                  <path d="M10 22h4"/>
                 </svg>
               </div>
               <div>
@@ -71,12 +72,12 @@ import Container from "./Container.astro";
               </div>
             </div>
 
-            <!-- Announcements -->
+            <!-- Announcements - Using Megaphone icon -->
             <div class="flex items-start gap-4 bg-white darkcancelbg-gray-800/50 rounded-xl p-4 shadow-sm">
               <div class="w-12 h-12 bg-red-50 darkcancelbg-red-900/10 rounded-lg flex items-center justify-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-secondary" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-                  <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                  <path d="m3 11 18-5v12L3 14v-3z"/>
+                  <path d="M11.6 16.8a3 3 0 1 1-5.8-1.6"/>
                 </svg>
               </div>
               <div>
@@ -85,13 +86,14 @@ import Container from "./Container.astro";
               </div>
             </div>
 
-            <!-- Comparisons -->
+            <!-- Comparisons - Using Scale icon -->
             <div class="flex items-start gap-4 bg-white darkcancelbg-gray-800/50 rounded-xl p-4 shadow-sm">
               <div class="w-12 h-12 bg-red-50 darkcancelbg-red-900/10 rounded-lg flex items-center justify-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-secondary" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <line x1="18" y1="20" x2="18" y2="10"></line>
-                  <line x1="12" y1="20" x2="12" y2="4"></line>
-                  <line x1="6" y1="20" x2="6" y2="14"></line>
+                  <path d="M8 3H6a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"/>
+                  <path d="M18 3h-2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"/>
+                  <path d="M12 12v9"/>
+                  <path d="m8 17 4-5 4 5"/>
                 </svg>
               </div>
               <div>
@@ -138,7 +140,7 @@ import Container from "./Container.astro";
           </div>
         </div>
 
-        <div class="pt-6">
+        <!-- <div class="pt-6">
           <a href="#" class="inline-flex items-center gap-2 text-secondary hover:text-secondary/80 font-medium">
             Learn More
             <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -146,7 +148,7 @@ import Container from "./Container.astro";
               <polyline points="12 5 19 12 12 19"></polyline>
             </svg>
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </Container>
