--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,9 @@ import Companeis from "../components/Companeis.astro";
 ---
 
 <Layout title="Auto B2B">
+  <HeroSection />
+  <div class="mt-40">
   <main class="space-y-40 mb-40">
-    <HeroSection />
     <Intro />
     <Logos />
     <Vs2 />
@@ -36,6 +37,7 @@ import Companeis from "../components/Companeis.astro";
     <Companeis />
     <FAQ />
   </main>
+</div>
 </Layout>
 
 <style>
